ash: Remove UpdateCursorCompositingEnabled() call in Shell::Init.

This UpdateCursorCompositingEnabled call is happening before
the GPU process is properly initialized.

Remove it as it's not needed here. UpdateCursorCompositingEnabled
will be called later when preferences have been loaded and GPU
process is properly initialized.

Bug: 832979
Test: chrome --ash-enable-cursor-motion-blur on Eve
Change-Id: I8603c007f1b0d201a046ffb7e84706af95c21097
Reviewed-on: https://chromium-review.googlesource.com/1013238
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: David Reveman <reveman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551118}
Former-commit-id: 7aca60bdff880f67372d8069f30b496b2102f065